--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tybys/binreader",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Binary reader for Node.js and browser.",
   "typings": "./lib/cjs-modern/index.d.ts",
   "module": "./lib/esm/index.js",
@@ -32,7 +32,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@tybys/tsgo": "^0.4.1",
+    "@tybys/tsgo": "^0.8.0",
     "@types/node": "^12.12.36",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
@@ -43,10 +43,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "rollup": "^2.28.2",
-    "typescript": "3.9.7"
+    "typescript": "4.0.5"
   },
   "dependencies": {
     "@tybys/native-require": "^3.0.0",
-    "tslib": "2.0.1"
+    "tslib": "^2.1.0"
   }
 }
