--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     # Setup .npmrc file to publish to npm
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v2
       with:
-        node-version: '12.x'
-        registry-url: 'https://registry.npmjs.org/'
+        node-version: '14.x'
+        registry-url: 'https://registry.npmjs.org'
         scope: '@tybys'
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
